fixed some spacing

--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -28,7 +28,7 @@
 
 .projectTitle {
     margin-top: 35px;
-    margin-bottom: 40px;
+    margin-bottom: 70px;
     text-align: center;
     padding-top: 100px;
 }
