--- a/style.css
+++ b/style.css
@@ -1315,7 +1315,7 @@ h1 {
 
 .projectTitle {
   margin-top: 35px;
-  margin-bottom: 40px;
+  margin-bottom: 70px;
   text-align: center;
   padding-top: 100px; }
 
